Adds some resembalance of a calculator

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   </head>
   <body>
     <div class="info"><p>This calculator is written in js....... MOAR TEXT</p></div>
-    <div class ="calculator"></div>
+    <div class ="calculator">
+      <p id="screen">3.14156</p>
+      <div class="numbers"></div>
+      <div class="operators">
+        <button name="add">+</button>
+        <button name="subtr">-</button>
+        <button name="multi">*</button>
+        <button name="div">/</button>
+      </div>
+    </div>
     <script src="calculator.js"></script>
   </body>
 </html>
