--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button name="subtr">-</button>
         <button name="multi">*</button>
         <button name="div">/</button>
+        <button name="eql" id="eql">=</button>
       </div>
     </div>
     <script src="calculator.js"></script>
