Adds clear button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button name="div">/</button>
         <button name="eql" id="eql">=</button>
       </div>
+      <div class="calc">
+        <button name="clr" id="clr">The big-ass clear button</button>
+      </div>
     </div>
     <script src="calculator.js"></script>
   </body>
