Seperates clear screen, and clear all button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <button name="eql" id="eql">=</button>
       </div>
       <div class="calc">
-        <button name="clr" id="clr">The big-ass clear button</button>
+        <button name="clr" id="clr">Clr Screen</button>
+        <button name="clr-calc" id="clr-calc">Clr All</button>
       </div>
     </div>
     <script src="calculator.js"></script>
